[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Games Screen/Games Data.gd" type="Script" id=1]
[ext_resource path="res://Assets/Theme/UITitleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/RichTextLabel Extended/RichTextLabel Extended.tscn" type="PackedScene" id=3]

[node name="Games Data" type="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="GamesDataContainer" type="VBoxContainer" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 939.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Ascended" parent="GamesDataContainer" instance=ExtResource( 3 )]
margin_right = 1920.0
margin_bottom = 15.0

[node name="GamesDataListContainer" type="VBoxContainer" parent="GamesDataContainer"]
margin_top = 19.0
margin_right = 1920.0
margin_bottom = 939.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EmptyGamesContainer" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 976.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EmptyGames" type="Label" parent="EmptyGamesContainer"]
margin_left = 699.0
margin_top = 471.0
margin_right = 1221.0
margin_bottom = 504.0
custom_fonts/font = ExtResource( 2 )
text = "Click on a game to see stats for that game."

[node name="ButtonsContainer" type="CenterContainer" parent="."]
margin_top = 980.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 100 )

[node name="Back" type="Button" parent="ButtonsContainer"]
margin_left = 937.0
margin_top = 40.0
margin_right = 983.0
margin_bottom = 60.0
text = "Back "

[connection signal="pressed" from="ButtonsContainer/Back" to="." method="_on_Back_pressed"]
